--- a/exercises/templates/exercises/view_exercise.html
+++ b/exercises/templates/exercises/view_exercise.html
@@ -1,5 +1,5 @@
-<!-- Designed by ____ on February ____ -->
-<!-- Modified by Brendon Wolfe on February 21st to handle photos -->
+<!-- Designed by Eli Sepulveda on February 17th -->
+<!-- Modified by Brendon Wolfe on March 7th -->
 
 {% extends 'fitness/header.html' %}
 {% load static %}
