--- a/fitness/templates/fitness/header.html
+++ b/fitness/templates/fitness/header.html
@@ -1,6 +1,6 @@
-<!-- Designed by ____ on February ____ -->
-<!-- Modified by Brendon Wolfe on February 19th -->
-<!-- Modified by Brendon Wolfe on February 25th -->
+<!-- Designed by Eli Sepulveda on February 17th -->
+<!-- Modified by Eli Sepulveda on February 19th -->
+<!-- Modified by Brendon Wolfe on February 25th to include a popup -->
 
 {% load static %}
 
