--- a/gym/static/gym/createGym.css
+++ b/gym/static/gym/createGym.css
@@ -37,7 +37,7 @@ input, textarea {
     padding: 10px 0px;
     margin-top: 5px;
     border: 1px solid #39FF14;
-    color: #F5F5F5;
+    color: white;
     border-radius: 5px;
 }
 
