--- a/gym/templates/gym/applications.html
+++ b/gym/templates/gym/applications.html
@@ -1,5 +1,5 @@
 <!--Designed by Joseph Marchione and Brendon Wolfe on February 11th-->
-<!--Modified by ___ on February __-->
+<!--Modified by Eli Sepulveda on February 15th-->
 
 {% extends 'fitness/header.html' %}
 {% load static %}
