--- a/exercises/static/exercises/view_exercises.css
+++ b/exercises/static/exercises/view_exercises.css
@@ -1,4 +1,5 @@
-/* Improved by Brendon Wolfe on February 21st */
+/* Designed by Eli Sepulveda on February 17th */
+/* Updated by Brendon Wolfe on February 21st */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -49,7 +50,7 @@ body {
 
 .exercise_description {
     font-size: 1.2rem;
-    color: #f5f5f5;
+    color: white;
 }
 
 .video_div {
@@ -98,7 +99,6 @@ body {
     background-color: #2ECC71;
 }
 
-/* Responsive Design */
 @media screen and (max-width: 768px) {
     .container {
         width: 90%;
