--- a/fitness/static/fitness/home.css
+++ b/fitness/static/fitness/home.css
@@ -1,15 +1,15 @@
 /* Designed by Brendon Wolfe on February 24th */
+/* Responsive design developed by Eli Sepulveda on March 8th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 body {
     font-family: 'Rajdhani', sans-serif;
     background-color: #121212;
-    color: #f5f5f5;
+    color: white;
     overflow: hidden; 
     margin: 0;
 }
-
 
 .container {
     display: flex;
@@ -76,4 +76,73 @@ body {
     align-items: center;
     justify-content: space-evenly;
     width: 80%;
+}
+
+.logoDivHome{
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    body {
+        overflow-y: auto;
+    }
+
+    .container {
+        flex-direction: column;
+        height: 20vh;
+        top: 0;
+    }
+
+    .sidebar {
+        width: 100%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        border-right: none;
+        border-bottom: 2px solid #39FF14;
+        justify-content: space-evenly;
+        padding: 0.5rem;
+        top: 0;
+    }
+
+    .sidebar a {
+        width: 95%;
+        padding: 0.6rem;
+        font-size: 0.9rem;
+        margin: 0.5rem;
+    }
+
+    .sidebar h2, .sidebar h3 {
+        font-size: 1rem;
+        margin: 0.3rem 0;
+    }
+
+    .screen {
+        width: 100%;
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .greeting, .gymCode {
+        text-align: center;
+        font-size: 1rem;
+    }
+
+    .gymName{
+        display: none;
+    }
+
+    .leaderboard {
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+    .logoDivHome{
+        left: 0;
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 15%;
+        height: 10vh;
+    }
 }
