--- a/fitness/static/fitness/profile.css
+++ b/fitness/static/fitness/profile.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'Rajdhani', sans-serif;
     background-color: #121212;
-    color: #f5f5f5;
+    color: white;
     margin: 0;
     padding: 0;
     display: flex;
@@ -76,7 +76,7 @@ body {
 
 .text {
     font-size: 1.2rem;
-    color: #f5f5f5;
+    color: white;
     font-weight: 400;
 }
 
