--- a/fitness/static/fitness/view_current_tasks.css
+++ b/fitness/static/fitness/view_current_tasks.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'Rajdhani', sans-serif;
     background-color: #121212;
-    color: #f5f5f5;
+    color: white;
     margin: 0;
     padding: 0;
     display: flex;
@@ -28,16 +28,11 @@ p {
 }
 
 
-
 a {
     text-decoration: none;
-    color: #39FF14;
+    color: #ffdd57;
     font-weight: bold;
     transition: color 0.3s ease;
-}
-
-a:hover {
-    color: #2ECC71;
 }
 
 ul {
@@ -51,16 +46,16 @@ li {
     border-radius: 10px;
     margin: 0.5rem 0;
     width: 60%;
-    transition: background 0.3s ease;
+    transition: background-color 0.3s ease;
 }
 
 li:hover {
-    background-color: #39FF14;
-    color: #121212;
+    background-color: #ffdd57;
+    box-shadow:  2px 2px 10px #ffdd57;
+    color: #232323;
 }
 
 li a {
-    display: block;
     padding: 0.5rem 0;
     color: inherit;
 }
