--- a/gym/static/gym/login.css
+++ b/gym/static/gym/login.css
@@ -1,11 +1,11 @@
-/* Designed by Brendon Wolfe on March 5th */
+/* Started by Eli Sepulveda on March 5th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 body {
     font-family: 'Rajdhani', sans-serif;
     background-color: #121212;
-    color: #f5f5f5;
+    color: white;
     margin: 0;
     padding: 0;
     display: flex;
