--- a/gym/templates/gym/login.html
+++ b/gym/templates/gym/login.html
@@ -25,7 +25,7 @@
 
         <button type="submit">Login</button>
     </form>
-    <p>Already have an account?</p>
+    <p>Don't have an account?</p>
     <h2><a href="{% url 'gym:signup' %}">Sign Up</a></h2>
 </body>
 
