--- a/gym/templates/gym/signup.html
+++ b/gym/templates/gym/signup.html
@@ -35,6 +35,7 @@
     <button type="submit">Submit</button>
 </form>
 
-<h2><a href="{% url 'gym:login' %}">Already have an account? Login</a></h2>
+<p>Already have an account?</p>
+<h2><a href="{% url 'gym:login' %}">Login</a></h2>
 
 {% endblock %}
