--- a/gym/static/gym/search_knights.css
+++ b/gym/static/gym/search_knights.css
@@ -123,3 +123,26 @@ h1 {
     border-radius: 50px;
     padding-bottom: 1rem;
 }
+
+/* Added by Joe Marchione on March 18th */
+
+.btn {
+    display: inline-block;
+    padding: 8px 12px;
+    background-color: #39FF14;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+}
+  
+.btn:hover {
+    background-color: #39FF14;
+}
+  
+.btn-danger {
+    background-color: #e74c3c;
+}
+  
+.btn-danger:hover {
+    background-color: #c0392b;
+}
