--- a/fitness/templates/fitness/assign_task.html
+++ b/fitness/templates/fitness/assign_task.html
@@ -1,6 +1,8 @@
 {% extends 'fitness/header.html' %}
-
+{% load static %}
 {% block content%}
+<link rel="stylesheet" type="text/css" href="{% static 'fitness/assign_task.css' %}">
+
 
     <h1>Assign Task to a FitKnight</h1>
     <form method="POST" >
