--- a/gym/static/gym/signup.css
+++ b/gym/static/gym/signup.css
@@ -1,5 +1,5 @@
-/* Designed by Eli Sepulveda on March 17th */
 
+/* Designed by Eli Sepulveda on March 17th */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -24,23 +24,23 @@ h1 {
     margin-bottom: 1rem;
 }
 
-.login-form {
+.signup-form {
     background-color: #232323;
     padding: 1.5rem;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(255, 221, 87, 0.3);
     width: 60%;
-    max-width: 400px;
+    max-width: 500px;
     text-align: left;
 }
 
-.login-form p {
+.signup-form p {
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
 }
 
-input {
+input, select {
     background-color: #1a1a1a;
     color: white;
     border: 1px solid #ffdd57;
@@ -48,11 +48,17 @@ input {
     border-radius: 5px;
     font-size: 1rem;
     transition: border-color 0.3s ease;
+    margin-bottom: 1rem;
 }
 
-input:focus {
+input:focus, select:focus {
     border-color: #f4c430;
     outline: none;
+}
+
+select {
+    appearance: none;
+    cursor: pointer;
 }
 
 button {
@@ -84,3 +90,4 @@ a {
 a:hover {
     color: #f4c430;
 }
+
