--- a/fitness/templates/fitness/home.html
+++ b/fitness/templates/fitness/home.html
@@ -64,10 +64,10 @@
             <form method="GET" class="leaderboard form">
                 {% if user.is_authenticated and user.gym and global_board %}
                     <input hidden type="checkbox" name="gym_board" checked id="id_global_board_checkbox">
-                    <button type="submit">View My Gym's Leaderboard</button>
+                    <button type="submit" class="swapLeaderboard">View My Gym's Leaderboard</button>
                 {% elif not global_board %}
                     <input hidden type="checkbox" name="gym_board" id="id_global_board_checkbox">
-                    <button type="submit" class="submit-button">View Global Leaderboard</button>
+                    <button type="submit" class="submit-button swapLeaderboard">View Global Leaderboard</button>
                 {% endif %}
             </form>
 
