--- a/gym/templates/gym/join_gym.html
+++ b/gym/templates/gym/join_gym.html
@@ -1,28 +1,32 @@
 {% extends 'fitness/header.html' %}
-
+{% load static %}
 {% block content %}
 
-<h1>Join Gym</h1>
+<link rel="stylesheet" type="text/css" href="{% static 'gym/join_gym.css' %}">
 
-<div class='error-message'>
-    <p>{{ error }} </p>
+<div class="join-gym-container">
+    <h1>Join Gym</h1>
+
+    <div class='error-message'>
+        <p>{{ error }} </p>
+    </div>
+
+    {% if success %}
+
+    <div class='success-message'>
+        <p>{{ success }} </p>
+    </div>
+    {% else %}
+    <form method="POST" class="join-gym-form">
+        {% csrf_token %}
+        <label for="id_gym_code">Join Code:</label>
+        <input type="text" name="code" maxlength="31" required id="id_gym_code">
+
+        <button type="submit">Join</button>
+    </form>
+
+    {% endif %}
 </div>
-
-{% if success %}
-
-<div class='success-message'>
-    <p>{{ success }} </p>
-</div>
-{% else %}
-<form method="POST" class="join-gym-form">
-    {% csrf_token %}
-    <label for="id_gym_code">Join Code:</label>
-    <input type="text" name="code" maxlength="31" required id="id_gym_code">
-
-    <button type="submit">Join</button>
-</form>
-
-{% endif %}
 
 
 {% endblock %}
