--- a/fitness/templates/fitness/assign_task.html
+++ b/fitness/templates/fitness/assign_task.html
@@ -1,7 +1,7 @@
 {% extends 'fitness/header.html' %}
 {% load static %}
 {% block content%}
-<link rel="stylesheet" type="text/css" href="{% static 'fitness/assign_task.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'fitness/assign_tasks.css' %}">
 
 
     <h1>Assign Task to a FitKnight</h1>
