--- a/dungeon/static/dungeon/dungeon_select.css
+++ b/dungeon/static/dungeon/dungeon_select.css
@@ -1,4 +1,4 @@
-
+/* Designed by Brendon Wolfe on March 31st */
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 .selectBody {
