--- a/exercises/static/exercises/search_exercises.css
+++ b/exercises/static/exercises/search_exercises.css
@@ -3,6 +3,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
+body{
+    background-color: #181818;
+    padding-top: 8vh;
+}
+
 h1 {
     color: #ffdd57;
     text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
@@ -21,7 +26,7 @@ ul {
     background-color: #282828;
     max-width: 25rem;
     padding: 1.5rem 4.5rem;
-    box-shadow: 0rem 0rem 1rem rgb(55, 255, 25);
+    box-shadow: 0rem 0rem 1rem rgb(55, 255, 25, 0.5);
     border-radius: .625rem;
 }   
 
@@ -59,7 +64,7 @@ ul li a:hover{
 .search-exercises-form input {
     padding: 0.5rem;
     border-radius: 0.3rem;
-    border: 0.06rem solid #39FF14;
+    border: 0.06rem solid #ffdd57;
     font-size: 1rem;
     background-color: #232323;
     color: white;
@@ -110,13 +115,14 @@ ul li a:hover{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #181818;
+    background-color: #121212;
+    box-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
     height: 100%;
     width: 60%;
     margin-left: 20%;
-    margin-top: 2%;
     border-radius: 50px;
     padding-bottom: 1rem;
+    margin-bottom: 1vh;
 }
 
 .logoDivSearch{
