--- a/fitness/static/fitness/view_current_tasks.css
+++ b/fitness/static/fitness/view_current_tasks.css
@@ -52,6 +52,7 @@ li {
     margin: 0.5rem 0;
     width: 15vw;
     transition: background-color 0.3s ease;
+    box-shadow: 0px 0px 15px #39FF14;
 }
 
 li:hover {
