--- a/gym/static/gym/applications.css
+++ b/gym/static/gym/applications.css
@@ -4,6 +4,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
+body{
+    background-color: #181818;
+    padding-top: 15vh;
+}
+
 h1 {
     text-align: center;
     color: #ffdd57;
@@ -19,7 +24,7 @@ h1 {
 }
 
 .application-item {
-    background-color: #232323; 
+    background-color: #181818; 
     border: .06rem solid #39FF14;
     border-radius: .3rem;
     padding: 1rem;
@@ -80,12 +85,12 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #181818;
+    background-color: #121212;
     height: 100%;
     width: 80%;
     margin-left: 10%;
-    margin-top: 2%;
     border-radius: 50px;
     padding-bottom: 1rem;
+    box-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
 }
 
