--- a/gym/static/gym/login.css
+++ b/gym/static/gym/login.css
@@ -56,7 +56,7 @@ input:focus {
 }
 
 button {
-    background-color: #ffdd57;
+    background-color: #39FF14;
     color: #232323;
     font-size: 1.2rem;
     font-weight: bold;
@@ -70,7 +70,7 @@ button {
 }
 
 button:hover {
-    background-color: #f4c430;
+    background-color: #28a828;
     transform: scale(1.05);
 }
 
