--- a/gym/static/gym/search_knights.css
+++ b/gym/static/gym/search_knights.css
@@ -2,6 +2,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
+body{
+    background-color: #181818;
+    padding-top: 11vh;
+}
+
 h1 {
     text-align: center;
     color: #ffdd57;
@@ -68,13 +73,15 @@ h1 {
 .list-div li {
     background-color: #232323;
     border: 0.06rem solid #39FF14;
-    box-shadow: 0rem 0rem 1rem rgb(55, 255, 25);
     border-radius: 0.3rem;
     padding: 1rem;
     margin-bottom: 1rem;
     font-size: 1.2rem;
     color: white;
     text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .list-div li a {
@@ -111,13 +118,14 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #181818;
+    background-color: #121212;
     height: 100%;
     width: 60%;
     margin-left: 20%;
     margin-top: 2%;
     border-radius: 50px;
     padding-bottom: 1rem;
+    box-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
 }
 
 /* Added by Joe Marchione on March 18th */
